# iching2

./: .gitignore  README.md  app_main.py
apis/sfit/: .gitignore  MyConfig.ini
apis/sfit/data/: HO2312-C-2200_market_data.csv  IH2401_market_data.csv  cu2401_market_data.csv
apis/sfit/include/td/: ctptdengine.h
apis/sfit/src/md/: ctpmdengine.cpp  mdengine.cpp
apis/sfit/tests/: mytest.cpp  runMdServer.cpp
apps/ake/: ake_app.py  ake_strategy.py  bt01_strategy.py
apps/forex/: account.py  account_manager.py  forex_app.py  forex_config.py  forex_repository.py  order_engine.py  sliding_window.py  tick_bar_aggregater.py  trade_engine.py
apps/forex/brokers/: base_broker.py  iching2_broker.py
apps/forex/exchs/: audusd_daily_k_exch.py  base_exch.py  lmax_bar_repo.py  lmax_order_book_receiver.py
apps/forex/funders/: base_funder.py  iching2_funder.py
apps/forex/strategies/: bar_rsfb_strategy.py  base_strategy.py  trend_following_strategy.py
apps/lmax/: csv_data_source.py  forex_data.py  lmax_app.py
apps/osd/: osd_app.py  risk_free_arbitrage.py
apps/sio/: akshare_exp.py  app_registry.py  monte_carlo.py  monte_carlo_util.py  sio_app.py
doc/: eru_usd_001.xlsx  iching2_architecture.pptx
hfts/: CMakeLists.txt
hfts/trading/: trading_main.cpp
utc/apps/forex/strategies/: t_trend_following_strategy.py
